Products.DCWorkflow Changelog
=============================

2.2.4 (unreleased)
------------------


2.2.3 (2011-01-12)
------------------

- Explicitly include permissions from CMFCore, which are needed now that
  they aren't declared in Five in Zope 2.13.


2.2.2 (2010-11-11)
------------------

- Fixed Chameleon compatibility in `state_groups.pt`.

- Workflow states cannot be renamed through the ZMI.
  (https://bugs.launchpad.net/zope-cmf/+bug/625722)


2.2.1 (2010-07-04)
------------------

- Deal with deprecation warnings for Zope 2.13.


2.2.0 (2010-01-04)
------------------

- no changes from version 2.2.0-beta


2.2.0-beta (2009-12-06)
-----------------------

- no changes from version 2.2.0-alpha


2.2.0-alpha (2009-11-13)
------------------------

- moved the Zope dependency to version 2.12.0b3dev

- Worklists: The catalog variable match setting can now be a 
  formatted string (as before), but also a qualified TAL 
  expression, meaning it has a prefix like "string:", "python:".
  (https://bugs.launchpad.net/zope-cmf/+bug/378292)

- exportimport: Support for instance creation guards and manager 
  bypass added.
  (https://bugs.launchpad.net/zope-cmf/+bug/308947)

- Cleaned up / normalized imports:

  o Don't import from Globals;  instead, use real locations.

  o Make other imports use the actual source module, rather than an
    intermediate (e.g., prefer importing 'ClassSecurityInfo' from
    'AccessControl.SecurityInfo' rather than from 'AccessControl').

  o Avoid relative imports, which will break in later versions of Python.

- Strip trailing newlines in order to properly match with a msgid when
  translating transition descriptions.

- Workflow UI: Remove ancient cruft to accommodate the proprietary
  (and long dead) base_cms product.

- Worklists and Transitions: Add icon expression properties to worklist
  and transition actions and their GenericSetup profiles.

- Fixed an import error (Products.PageTemplates.TALES is gone on 